# tri-lingual-turing-agents

./: .env.example  .gitignore  COMPLIANCE_ACTION_PLAN.md  EXPERIMENT_COMPLETE_README.md  FINAL_REPORT.md  IMPLEMENTATION_PLAN.md  README.md  REAL_AGENTS_GUIDE.md  RPD.md  TEST_COVERAGE_FINAL_REPORT.md  TEST_COVERAGE_SUMMARY.md  USAGE_GUIDE.md  compile_real_agent_results.py  complete_experiment.py  pyproject.toml  requirements.txt  run_experiment_mock.py  run_experiment_with_real_agents.py  run_full_experiment_suite.py  run_interactive.py
.claude/agents/: english-french-translator.md  french-hebrew-translator.md  hebrew-english-translator.md
docs/: ARCHITECTURE.md  BUILDING_BLOCKS.md  COST_ANALYSIS.md  PARALLEL_PROCESSING.md  PRD.md  TECHNICAL_CHECKLIST.md
notebooks/: results_analysis.ipynb
scripts/: __init__.py  compile_real_agent_results.py  complete_experiment.py  run_experiment_mock.py  run_experiment_with_real_agents.py  run_full_experiment_suite.py  run_interactive.py
src/: __init__.py  main.py  pipeline.py  visualization.py
src/tri_lingual_agents/: __init__.py
src/tri_lingual_agents/agents/: __init__.py  parallel.py  translators.py
src/tri_lingual_agents/embeddings/: __init__.py  distance.py  parallel.py
src/tri_lingual_agents/error_injection/: __init__.py  injector.py
src/tri_lingual_agents/pipeline/: __init__.py  orchestrator.py
src/tri_lingual_agents/visualization/: __init__.py
tests/: __init__.py
tests/test_agents/: test_translators.py
tests/test_embeddings/: test_distance.py
tests/test_error_injection/: __init__.py  test_injector.py
tests/test_parallel/: test_agents_parallel.py  test_embeddings_parallel.py
tests/test_pipeline/: test_orchestrator.py
tests/test_visualization/: test_plots.py
